# inventory_qr

./: data.json  db.sqlite3  pyproject.toml
app/: admin.py  models.py  save_to_excel.py  signals.py  urls.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_alter_corpus_options_alter_floor_options_and_more.py  0002_remove_employeeinventory_count_and_more.py  0003_alter_teacher_degree.py  0004_warehouse.py  0005_alter_teacher_degree.py  0006_inventory_photo_teacher_avatar.py  0007_warehouse_price.py  0008_inventory_price.py  0009_additionalexpense_inventory_created_at_and_more.py  0009_inventory_created_at_inventory_updated_at_and_more.py  0010_alter_teacher_options_alter_teacherinventory_options_and_more.py  0011_additionalexpense_check_img_additionalexpensephoto.py
config/: settings.py  urls.py
templates/app/: index.html  index.html.save  invernments.html  warehouse.html
